<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.dschulz</groupId>
    <artifactId>ruc-conv</artifactId>
    <version>1.0</version>
    <name>ruc-conv</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <junit.version>5.10.0</junit.version>
        <main.class>com.dschulz.rucconv.Application</main.class>
        <jlink-image-name>rucconv</jlink-image-name>
        <javafx.version>21</javafx.version>
<!--        <commons-csv-jar-name>commons-csv-1.10.0.jar</commons-csv-jar-name>-->
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-javafx</artifactId>
            <version>12.3.1</version>
        </dependency>
        <dependency>
            <groupId>org.controlsfx</groupId>
            <artifactId>controlsfx</artifactId>
            <version>11.1.2</version>
        </dependency>
<!--        <dependency>-->
<!--            <groupId>org.apache.commons</groupId>-->
<!--            <artifactId>commons-csv</artifactId>-->
<!--            <version>1.10.0</version>-->
<!--        </dependency>-->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.pdfbox</groupId>
            <artifactId>pdfbox</artifactId>
            <version>3.0.1</version>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <executions>
                    <execution>
                        <!-- Default configuration for running with: mvn clean javafx:run -->
                        <id>default-cli</id>
                        <configuration>
                            <mainClass>com.dschulz.rucconv/com.dschulz.rucconv.Application</mainClass>
                            <launcher>rucconv</launcher>
                            <jlinkZipName>rucconv</jlinkZipName>
                            <jlinkImageName>rucconv</jlinkImageName>
                            <noManPages>true</noManPages>
                            <stripDebug>true</stripDebug>
                            <noHeaderFiles>true</noHeaderFiles>
<!--                            <options>-cp ../lib/${commons-csv-jar-name}</options>-->

                        </configuration>
                    </execution>
                </executions>
            </plugin>

<!--            <plugin>-->
<!--                <groupId>org.apache.maven.plugins</groupId>-->
<!--                <artifactId>maven-dependency-plugin</artifactId>-->
<!--                <executions>-->
<!--                    <execution>-->
<!--                        <id>copy</id>-->
<!--                        <phase>package</phase>-->
<!--                        <goals>-->
<!--                            <goal>copy</goal>-->
<!--                        </goals>-->
<!--                    </execution>-->
<!--                </executions>-->
<!--                <configuration>-->
<!--                    <artifactItems>-->
<!--                        <artifactItem>-->
<!--                            <groupId>org.apache.commons</groupId>-->
<!--                            <artifactId>commons-csv</artifactId>-->
<!--                            <version>1.10.0</version>-->
<!--                            <type>jar</type>-->
<!--                            <destFileName>${commons-csv-jar-name}</destFileName>-->
<!--                        </artifactItem>-->
<!--                    </artifactItems>-->
<!--                    <outputDirectory>${project.build.directory}/${jlink-image-name}/lib</outputDirectory>-->
<!--                    <overWriteReleases>true</overWriteReleases>-->
<!--                    <overWriteSnapshots>true</overWriteSnapshots>-->
<!--                </configuration>-->
<!--            </plugin>-->

        </plugins>
    </build>
</project>
